# repo-graph

./: .gitignore  .npmrc  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vitest.live.config.ts
rust/: Cargo.toml  rust-toolchain.toml
rust/crates/agent/: Cargo.toml
rust/crates/agent/src/: confidence.rs  doc_relevance.rs  errors.rs  lib.rs  ranking.rs  storage_port.rs
rust/crates/agent/src/aggregators/: boundary.rs  cycles.rs  dead_code.rs  gate.rs  mod.rs  module_summary.rs  snapshot.rs  trust.rs
rust/crates/agent/src/check/: evaluate.rs  mod.rs  reduce.rs  types.rs
rust/crates/agent/src/dto/: budget.rs  envelope.rs  limit.rs  mod.rs  signal.rs  source.rs
rust/crates/agent/src/explain/: mod.rs
rust/crates/agent/src/orient/: file.rs  mod.rs  path.rs  repo.rs  symbol.rs
rust/crates/agent/tests/: check_repo.rs  explain_file.rs  explain_path.rs  explain_symbol.rs  orient_file_signals.rs  orient_focus.rs  orient_path_signals.rs  orient_repo_budget.rs  orient_repo_confidence.rs  orient_repo_dead_code_reliability.rs  orient_repo_gate.rs  orient_repo_limits.rs  orient_repo_ranking.rs  orient_repo_shape.rs  orient_repo_signals.rs  orient_symbol_focus.rs  orient_symbol_signals.rs
rust/crates/agent/tests/common/: mod.rs
rust/crates/c-extractor/: Cargo.toml
rust/crates/c-extractor/src/: extractor.rs  lib.rs  metrics.rs
rust/crates/classification/: Cargo.toml
rust/crates/classification/src/: blast_radius.rs  boundary_evaluator.rs  boundary_matcher.rs  boundary_parser.rs  framework_boundary.rs  framework_entrypoints.rs  hotspot_scorer.rs  lib.rs  module_edges.rs  module_rollup.rs  risk_scorer.rs  signals.rs  spring_liveness.rs  types.rs  unresolved_classifier.rs  weighted_neighbors.rs
rust/crates/classification/tests/: parity.rs
rust/crates/detectors/: Cargo.toml
rust/crates/detectors/src/: comment_masker.rs  hooks.rs  lib.rs  loader.rs  pipeline.rs  types.rs  walker.rs
rust/crates/detectors/tests/: comment_masker.rs  hooks.rs  loader.rs  parity.rs  pipeline.rs  walker.rs
rust/crates/doc-facts/: Cargo.toml
rust/crates/doc-facts/src/: classification.rs  discovery.rs  lib.rs  types.rs
rust/crates/doc-facts/src/extractors/: config.rs  frontmatter.rs  keyword.rs  marker.rs  mod.rs
rust/crates/gate/: Cargo.toml
rust/crates/gate/src/: assemble.rs  compute.rs  errors.rs  lib.rs  storage_port.rs  types.rs
rust/crates/git/: Cargo.toml
rust/crates/git/src/: churn.rs  error.rs  lib.rs
rust/crates/git/tests/: churn_integration.rs
rust/crates/indexer/: Cargo.toml
rust/crates/indexer/src/: extractor_port.rs  hook.rs  include_resolver.rs  invalidation.rs  lib.rs  orchestrator.rs  resolver.rs  routing.rs  storage_port.rs  types.rs
rust/crates/indexer/tests/: parity.rs
rust/crates/java-extractor/: Cargo.toml
rust/crates/java-extractor/src/: builtins.rs  extractor.rs  lib.rs  metrics.rs
rust/crates/module-queries/: Cargo.toml
rust/crates/module-queries/src/: context.rs  facts.rs  lib.rs  violations.rs
rust/crates/policy-facts/: Cargo.toml
rust/crates/policy-facts/src/: lib.rs  storage_port.rs  types.rs
rust/crates/policy-facts/src/extractors/: behavioral_marker.rs  mod.rs  return_fate.rs  status_mapping.rs
rust/crates/policy-facts/tests/: swupdate_validation.rs
rust/crates/python-extractor/: Cargo.toml
rust/crates/python-extractor/src/: builtins.rs  extractor.rs  lib.rs
rust/crates/quality-policy/: Cargo.toml
rust/crates/quality-policy-runner/: Cargo.toml
rust/crates/quality-policy-runner/src/: error.rs  lib.rs  runner.rs
rust/crates/quality-policy/src/: assess.rs  lib.rs
rust/crates/repo-index/: Cargo.toml
rust/crates/repo-index/src/: compose.rs  config.rs  lib.rs  scanner.rs  state_boundary_hook.rs
rust/crates/repo-index/tests/: integration.rs  refresh.rs  state_boundary_integration.rs
rust/crates/rgr/: Cargo.toml
rust/crates/rgr/src/: coverage.rs  gate.rs  main.rs  module_resolution.rs
rust/crates/rgr/src/cli/: context.rs  envelope.rs  (+3 more)
rust/crates/rgr/tests/: assess_command.rs  callees_command.rs  callers_command.rs  check_command.rs  churn_command.rs  cycles_command.rs  dead_command.rs  declare_boundary_command.rs  declare_deactivate_command.rs  declare_quality_policy_command.rs  declare_requirement_command.rs  declare_supersede_boundary_command.rs  declare_supersede_requirement_command.rs  declare_supersede_waiver_command.rs  declare_waiver_command.rs  docs_command.rs  edge_type_filter.rs  envelope_contract.rs  explain_command.rs  gate_command.rs  hotspots_command.rs  imports_command.rs  metrics_command.rs  modules_files_command.rs  modules_list_command.rs  modules_show_command.rs  modules_violations_command.rs  orient_command.rs  path_command.rs  risk_command.rs  stats_command.rs  surfaces_command.rs  trust_command.rs  violations_command.rs
rust/crates/rust-extractor/: Cargo.toml
rust/crates/rust-extractor/src/: builtins.rs  extractor.rs  lib.rs
rust/crates/state-bindings/: Cargo.toml  bindings.toml
rust/crates/state-bindings/src/: basis.rs  lib.rs  matcher.rs  stable_key.rs  table.rs
rust/crates/state-bindings/tests/: matcher.rs  stable_key.rs  table.rs
rust/crates/state-extractor/: Cargo.toml
rust/crates/state-extractor/src/: emit.rs  evidence.rs  lib.rs
rust/crates/state-extractor/tests/: emit.rs  typescript_integration.rs
rust/crates/storage/: Cargo.toml
rust/crates/storage/src/: agent_impl.rs  connection.rs  diagnostic.rs  error.rs  gate_impl.rs  indexer_impl.rs  lib.rs  policy_facts_impl.rs  quality_policy_impl.rs  quality_policy_port.rs  queries.rs  trust_impl.rs  types.rs
rust/crates/storage/tests/: agent_impl.rs  gate_impl.rs  parity.rs  state_boundary_kinds_tolerance.rs  state_boundary_subtypes_tolerance.rs
rust/crates/trust/: Cargo.toml
rust/crates/trust/src/: lib.rs  overlay.rs  rules.rs  service.rs  storage_port.rs  types.rs
rust/crates/trust/tests/: parity.rs
rust/crates/ts-extractor/: Cargo.toml
rust/crates/ts-extractor/src/: builtins.rs  extractor.rs  lib.rs  metrics.rs
rust/crates/ts-extractor/tests/: parity.rs
(+777 files in other folders)
