# ── repo-graph-c-extractor ─────────────────────────────────────────
#
# Rust-native C extractor using tree-sitter-c.
#
# Extracts:
#   - FILE nodes
#   - SYMBOL nodes: functions (definitions only), structs, enums, typedefs
#   - IMPORTS edges from #include directives
#   - CALLS edges from direct function calls (plain identifiers only)
#   - Cyclomatic complexity metrics
#
# Does NOT extract:
#   - Function declarations/prototypes (definitions only)
#   - C++ constructs (separate cpp-extractor crate)
#   - Macro-expanded code (source-truth semantics)
#
# See docs/milestones/c-extractor-v1.md for full design decisions.

[package]
name         = "repo-graph-c-extractor"
version      = "0.1.0"
edition      = "2021"
rust-version = "1.70.0"
license      = "MIT"
description  = "C language extractor for repo-graph using tree-sitter"
publish      = false

[dependencies]
repo-graph-indexer = { path = "../indexer" }
repo-graph-classification = { path = "../classification" }
tree-sitter = "0.24"
tree-sitter-c = "0.23"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
