# -- repo-graph-python-extractor ---------------------------------
#
# Concrete ExtractorPort adapter for Python source files using
# native tree-sitter.
#
# Slice scope (Python extractor v1):
#   - Implements ExtractorPort from repo-graph-indexer
#   - Uses tree-sitter-python grammar
#   - Produces ExtractedNode, ExtractedEdge, ImportBinding
#   - Advertises language: ["python"]
#   - FILE nodes for all .py files
#   - SYMBOL nodes: function, class, method
#   - IMPORTS edges from import/from-import statements
#   - CALLS edges from call expressions
#   - Docstring extraction
#
# Architecture:
#   - This crate is an OUTER-LAYER ADAPTER. It depends on the
#     indexer policy crate's ExtractorPort trait and DTOs.
#   - Does NOT depend on storage, classification logic, or trust.
#   - Owns grammar loading, parser lifecycle, and syntax-tree traversal.
#
# NOT in scope (v1):
#   - Framework detectors (FastAPI, Django, Flask)
#   - Decorators as liveness signals
#   - Type inference or stub resolution
#   - Complexity metrics (deferred)
#   - Async/await special handling

[package]
name         = "repo-graph-python-extractor"
version      = "0.1.0"
edition      = "2021"
rust-version = "1.93.0"
license      = "MIT"
description  = "Python tree-sitter extractor for repo-graph"
publish      = false

[dependencies]
# Indexer crate -- for ExtractorPort, ExtractedNode, ExtractedEdge,
# ExtractedMetrics, ExtractionResult, domain enums.
repo-graph-indexer = { path = "../indexer" }

# Classification crate -- for ImportBinding, RuntimeBuiltinsSet,
# SourceLocation types used in ExtractorPort interface.
repo-graph-classification = { path = "../classification" }

# tree-sitter -- native Rust binding. No WASM, no runtime grammar
# loading. Grammars compiled as C libraries, linked statically.
tree-sitter = "0.24"

# tree-sitter-python -- Python grammar.
# Using 0.23 to match tree-sitter 0.24 ABI compatibility.
tree-sitter-python = "0.23"

# Serde for metadata JSON serialization.
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# UUID v4 for node/edge UID generation.
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
walkdir = "2"
