# ── repo-graph-rgr ─────────────────────────────────────────────────
#
# Minimal Rust CLI entry point. Outermost layer — depends on
# everything, nothing depends on it.
#
# Commands (accumulated by slice):
#   Rust-7B: `index   <repo_path> <db_path>`
#   Rust-8:  `trust   <db_path> <repo_uid>`
#   Rust-9:  `refresh <repo_path> <db_path>`
#   Rust-10: `callers <db_path> <repo_uid> <symbol>`
#   Rust-11: `callees <db_path> <repo_uid> <symbol>`
#   Rust-12: `dead    <db_path> <repo_uid> [kind]`
#   Rust-13: `cycles  <db_path> <repo_uid>`
#
# No formatting-heavy UX.

[package]
name         = "repo-graph-rgr"
version      = "0.1.0"
edition      = "2021"
rust-version = "1.93.0"
license      = "MIT"
description  = "Minimal Rust CLI for repo-graph indexing, trust, and graph queries"
publish      = false

[[bin]]
name = "rgr-rust"
path = "src/main.rs"

[dependencies]
repo-graph-repo-index = { path = "../repo-index" }
repo-graph-storage = { path = "../storage" }
repo-graph-trust = { path = "../trust" }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
