# ── repo-graph-rgr ─────────────────────────────────────────────────
#
# Minimal Rust CLI entry point. Outermost layer — depends on
# everything, nothing depends on it.
#
# Commands (accumulated by slice):
#   Rust-7B: `index   <repo_path> <db_path>`
#   Rust-8:  `trust   <db_path> <repo_uid>`
#   Rust-9:  `refresh <repo_path> <db_path>`
#   Rust-10: `callers <db_path> <repo_uid> <symbol>`
#   Rust-11: `callees <db_path> <repo_uid> <symbol>`
#   Rust-12: `dead    <db_path> <repo_uid> [kind]`
#   Rust-13: `cycles  <db_path> <repo_uid>`
#   Rust-14: `stats   <db_path> <repo_uid>`
#
# Rust-15: QueryResult envelope standardization across all read commands.
# Rust-16: Consolidation — docs, tech-debt register, contract tests, interop expansion.
# Rust-17: --edge-types filter for callers/callees (CALLS, INSTANTIATES).
# Rust-18: `imports <db_path> <repo_uid> <file_path>`
# Rust-19: `path    <db_path> <repo_uid> <from> <to>`
# Rust-20: Interop hardening — cross-runtime proof for all graph query surfaces.
# Rust-22: `violations <db_path> <repo_uid>` (first governance command).
# Rust-24: `gate <db_path> <repo_uid>` (narrow: arch_violations only, default mode).
# Rust-25: gate waiver overlay (active waiver resolution, expiry, audit trail).
# Rust-26: gate modes (--strict, --advisory, default).
# Rust-28: coverage_threshold gate method (reads line_coverage measurements).
# Rust-29: complexity_threshold gate method (reads cyclomatic_complexity measurements).
# Rust-31: hotspot_threshold gate method (reads hotspot_score inferences).
# Rust-33: declare boundary CLI command (first governance write path).
# Rust-34: declare requirement CLI command.
# Rust-35: declare waiver CLI command.
# Rust-36: declare deactivate CLI command.
# Rust-38: declare supersede boundary CLI command.
# Rust-39: declare supersede requirement CLI command.
# Rust-40: declare supersede waiver CLI command.
# Rust-43A: gate policy relocated into repo-graph-gate (separate crate).
# Rust-43B: `orient <db_path> <repo_uid> [--budget ...] [--focus ...]`
#           First exposure of the agent orientation surface.
#           Uses <db_path> <repo_uid> positional pair to match the
#           existing Rust CLI shape. Repo-name invocation is deferred
#           to the rename/registry slice (Rust-43C+).
#
# No formatting-heavy UX.

[package]
name         = "repo-graph-rgr"
version      = "0.1.0"
edition      = "2021"
rust-version = "1.93.0"
license      = "MIT"
description  = "Minimal Rust CLI for repo-graph indexing, trust, and graph queries"
publish      = false

[[bin]]
name = "rgr-rust"
path = "src/main.rs"

[dependencies]
repo-graph-agent = { path = "../agent" }
repo-graph-gate = { path = "../gate" }
repo-graph-repo-index = { path = "../repo-index" }
repo-graph-storage = { path = "../storage" }
repo-graph-trust = { path = "../trust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
